add dulmmy components add resolver add myLoactionStrategy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>
   {{title}}
 </h1>
+<a routerLink="alfa">A</a>
+<a routerLink="beta">B</a>
+<a routerLink="gama">G</a>
+<router-outlet></router-outlet>
